# Dashboard_Cardiovascular_Predict

./: .gitignore  DEPLOYMENT.md  GITHUB_RELEASES_GUIDE.md  Pipfile  QUICK_START_GITHUB_RELEASES.md  README.md  TROUBLESHOOTING.md  VERCEL_SETTINGS_GUIDE.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  vite.config.ts
additional-context/: cardio_pipeline.py  features.json  inference_api.py
api/: predict.py
src/: App.tsx
src/components/: Navbar.css  Navbar.tsx
src/pages/: About.css  About.tsx  Analytics.css  Analytics.tsx  Logging.css  Logging.tsx  Predict.css  Predict.tsx
