[project]
name = "dashboard-cardio"
version = "1.0.0"
# HAPUS baris requires-python agar Vercel pakai Python 3.12 bawaan sistem
# requires-python = "==3.10" 

dependencies = [
    "joblib>=1.4.0",        # Upgrade ke versi stabil terbaru
    "numpy>=1.26.0,<2.0.0", # Pakai 1.26 (PENTING: JANGAN 2.0 dulu, banyak breaking change)
    "scikit-learn>=1.5.0",  # Upgrade ke 1.5+ supaya stabil di Python 3.12
    "setuptools>=68.0.0"
]